# testdev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  dummy_data.sql  dummy_data2.sql  dummydata.sql  leptos.toml  nixpacks.toml  railway.json  railway.toml  seed_dummy_data.sql  start.sh
.cargo/: config.toml
certs/: cert 2.pem  cert.pem  key 2.pem  key.pem
migrations/: 20250101000000_create_module_students.sql  20250926072847_create_initial_tables.down.sql  20250926081935_create_initial_tables.sql  20250926090350_remove_university_field.down.sql  20250926090350_remove_university_field.up.sql  20251001090000_add_duration_minutes_to_classes.sql.sql  20251006000000_add_university_field_back.sql  20251020100000_create_class_sessions.sql  20251101000000_add_session_location.sql
src/: app.rs  lib.rs  main.rs  types.rs  user_context.rs
src/components/: calendar.rs  class_list.rs  header.rs  mod.rs  module_card.rs  module_card_tailwind.rs  nav_bar.rs  qr_scanner.rs  stat_tile.rs  top_bar.rs
src/database/: auth.rs  class_sessions.rs  classes.rs  connection.rs  mod.rs  models.rs  modules.rs  schema.rs
src/pages/: mod.rs  role.rs  student_edit_profile.rs  student_home.rs  student_login.rs  student_profile.rs  student_statistics.rs  support.rs  terms_and_conditions.rs
src/routes/: about.rs  auth_functions.rs  class_functions.rs  class_qr.rs  classes.rs  edit_class.rs  edit_modules.rs  error.rs  helpers.rs  home.rs  login.rs  mod.rs  module_functions.rs  new_class.rs  new_module.rs  profile.rs  profile_functions.rs  register.rs  statistics 2.rs  statistics.rs  stats_functions.rs  student_functions.rs  timetable.rs
src/utils/: geolocation.rs
style/: custom.scss  custom_old.scss  main.scss  tokens.scss
